--- a/data/events/2017-galway.yml
+++ b/data/events/2017-galway.yml
@@ -34,7 +34,7 @@ nav_elements: # List of pages you want to show up in the navigation of your page
   - name: propose
   - name: location
   - name: registration
- # - name: program
+  - name: program
  # - name: speakers
   - name: sponsor
   - name: contact
@@ -111,7 +111,7 @@ proposal_email: "proposals-galway-2017@devopsdays.org" # Put your proposal email
 # List all of your sponsors here along with what level of sponsorship they have.
 # Check data/sponsors/ to use sponsors already added by others.
 sponsors:
- #  url: http://mysponsor.com/?campaign=me # Use this if you need to over-ride a sponsor URL.   
+ #  url: http://mysponsor.com/?campaign=me # Use this if you need to over-ride a sponsor URL.
 #  - id: arresteddevops
 #   level: community
   - id: pivotal
@@ -152,3 +152,190 @@ sponsor_levels:
     label: Services
   - id: community
     label: Community
+
+program:
+  # Day one
+  - title: "Registration, Breakfast, and Sponsor Booths Open"
+    type: custom
+    date: 2017-11-13
+    start_time: "08:30"
+    end_time: "09:30"
+  - title: "Opening of the Conference"
+    type: custom
+    date: 2017-11-13
+    start_time: "09:30"
+    end_time: "10:00"
+  - title: "talk 1"
+    type: talk
+    date: 2017-11-13
+    start_time: "10:00"
+    end_time: "10:30"
+  - title: "mary-newell"
+    type: talk
+    date: 2017-11-13
+    start_time: "10:35"
+    end_time: "11:05"
+  - title: "Break"
+    type: custom
+    date: 2017-11-13
+    start_time: "11:05"
+    end_time: "11:20"
+  - title: "ross-coll"
+    type: talk
+    date: 2017-11-13
+    start_time: "11:20"
+    end_time: "11:50"
+  - title: "peter-kennedy"
+    type: talk
+    date: 2017-11-13
+    start_time: "11:55"
+    end_time: "12:25"
+  - title: "talk 5"
+    type: talk
+    date: 2017-11-13
+    start_time: "12:30"
+    end_time: "13:00"
+  - title: "Lunch"
+    type: custom
+    date: 2017-11-13
+    start_time: "13:00"
+    end_time: "14:00"
+  - title: "Ignites"
+    type: ignite
+    date: 2017-11-13
+    start_time: "14:00"
+    end_time: "14:20"
+  - title: "Openspace Opening and Voting"
+    type: open-space
+    date: 2017-11-13
+    start_time: "14:20"
+    end_time: "14:40"
+  - title: "Break"
+    type: custom
+    date: 2017-11-13
+    start_time: "14:40"
+    end_time: "15:00"
+  - title: "Openspace 1"
+    type: open-space
+    date: 2017-11-13
+    start_time: "15:00"
+    end_time: "15:30"
+  - title: "Openspace 2"
+    type: open-space
+    date: 2017-11-13
+    start_time: "15:45"
+    end_time: "16:15"
+  - title: "Openspace 3"
+    type: open-space
+    date: 2017-11-13
+    start_time: "16:30"
+    end_time: "17:00"
+  - title: "Close Day / Wrap Up"
+    type: custom
+    date: 2017-11-13
+    start_time: "17:00"
+    end_time: "17:15"
+  #- title: "Dinner & Networking ChillOps"
+  #  type: custom
+  #  date: 2017-11-13
+  #  start_time: "17:15"
+  #
+  # Day two
+  - title: "Registration, Breakfast, and Sponsor Booths Open"
+    type: custom
+    date: 2017-11-14
+    start_time: "09:00"
+    end_time: "09:45"
+  - title: "Day 2 - Opening Welcome"
+    type: custom
+    date: 2017-11-14
+    start_time: "09:45"
+    end_time: "10:00"
+  - title: "conall-bennett"
+    type: talk
+    date: 2017-11-14
+    start_time: "10:00"
+    end_time: "10:30"
+  - title: "cynthia-lopes-do-sacramento"
+    type: talk
+    date: 2017-11-14
+    start_time: "10:35"
+    end_time: "11:05"
+  - title: "Break"
+    type: custom
+    date: 2017-11-14
+    start_time: "11:05"
+    end_time: "11:20"
+  - title: "praveen-shukla"
+    type: talk
+    date: 2017-11-14
+    start_time: "11:20"
+    end_time: "11:50"
+  - title: "shane-tuohy"
+    type: talk
+    date: 2017-11-14
+    start_time: "11:55"
+    end_time: "12:25"
+  - title: "talk 5"
+    type: talk
+    date: 2017-11-14
+    start_time: "12:30"
+    end_time: "13:00"
+  - title: "Lunch"
+    type: custom
+    date: 2017-11-14
+    start_time: "13:00"
+    end_time: "14:00"
+  - title: "Ignites"
+    type: ignite
+    date: 2017-11-14
+    start_time: "14:00"
+    end_time: "14:20"
+  - title: "Openspace Opening and Voting"
+    type: open-space
+    date: 2017-11-14
+    start_time: "14:20"
+    end_time: "14:40"
+  - title: "Break"
+    type: custom
+    date: 2017-11-14
+    start_time: "14:40"
+    end_time: "15:00"
+  - title: "Openspace 1"
+    type: open-space
+    date: 2017-11-14
+    start_time: "15:00"
+    end_time: "15:30"
+  - title: "Openspace 2"
+    type: open-space
+    date: 2017-11-14
+    start_time: "15:45"
+    end_time: "16:15"
+  - title: "Openspace 3"
+    type: open-space
+    date: 2017-11-14
+    start_time: "16:30"
+    end_time: "17:00"
+  - title: "Closing event"
+    type: custom
+    date: 2017-11-14
+    start_time: "17:15"
+    end_time: "17:30"
+
+ignites:
+  - title: "tony-chapman"
+    date: 2017-11-13
+  - title: "garima-sharma"
+    date: 2017-11-13
+  - title: "eoin-connaughton"
+    date: 2017-11-13
+  - title: "antoine-voiry"
+    date: 2017-11-13
+  - title: "mark-walsh"
+    date: 2017-11-14
+  - title: "owen-byrne"
+    date: 2017-11-14
+  - title: "alan-duggan"
+    date: 2017-11-14
+  - title: "paul-oconnor"
+    date: 2017-11-14
